♻️ 유저 엔티티 개선